@@ -1,13 +1,13 @@
 package io.github.liutaurasvilda.gol;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class WorldTest {
 
@@ -15,30 +15,30 @@ public class WorldTest {
 
     @Test
     public void world_generation_with_no_seed_has_no_population() {
-        List<Location> seed = Collections.emptyList();
+        List<Location> seed = List.of();
         World world = World.generation(seed, WORLD_SIZE);
-        assertThat(world.hasPopulation(), is(false));
+        assertFalse(world.hasPopulation());
     }
 
     @Test
     public void world_generation_with_one_seed_has_population() {
-        List<Location> seed = Collections.singletonList(Location.of(0, 0));
+        List<Location> seed = List.of(Location.of(0, 0));
         World world = World.generation(seed, WORLD_SIZE);
-        assertThat(world.hasPopulation(), is(true));
+        assertTrue(world.hasPopulation());
     }
 
     @Test
     public void world_generation_with_no_seed_has_no_population_in_next_generation() {
-        List<Location> seed = Collections.emptyList();
+        List<Location> seed = List.of();
         World world = World.generation(seed, WORLD_SIZE);
-        assertThat(world.nextGeneration().hasPopulation(), is(false));
+        assertFalse(world.nextGeneration().hasPopulation());
     }
 
     @Test
     public void world_generation_with_one_seed_has_no_population_in_next_generation() {
-        List<Location> seed = Collections.singletonList(Location.of(0, 0));
+        List<Location> seed = List.of(Location.of(0, 0));
         World world = World.generation(seed, WORLD_SIZE);
-        assertThat(world.nextGeneration().hasPopulation(), is(false));
+        assertFalse(world.nextGeneration().hasPopulation());
     }
 
     @Test
@@ -48,7 +48,7 @@ public class WorldTest {
                 Location.of(1, 0)
         );
         World world = World.generation(seed, WORLD_SIZE);
-        assertThat(world.nextGeneration().hasPopulation(), is(false));
+        assertFalse(world.nextGeneration().hasPopulation());
     }
 
     @Test
@@ -59,38 +59,24 @@ public class WorldTest {
                 Location.of(2, 0)
         );
         World world = World.generation(seed, WORLD_SIZE);
-        assertThat(world.nextGeneration().hasPopulation(), is(true));
-    }
-
-    @Test(expected = NullPointerException.class)
-    public void world_generation_with_seed_being_null_throws_an_exception() {
-        World world = World.generation(null, WORLD_SIZE);
-        assertThat(world.nextGeneration().hasPopulation(), is(true));
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void world_generation_with_one_seed_being_null_throws_an_exception() {
-        List<Location> seed = Arrays.asList(
-                Location.of(0, 0),
-                null
-        );
-        World world = World.generation(seed, WORLD_SIZE);
-        assertThat(world.nextGeneration().hasPopulation(), is(true));
+        assertTrue(world.nextGeneration().hasPopulation());
     }
 
     @Test
     public void world_toString() {
         String expected =
-                "..........\n" +
-                "..........\n" +
-                "..........\n" +
-                "..........\n" +
-                ".....0....\n" +
-                "......0...\n" +
-                "....000...\n" +
-                "..........\n" +
-                "..........\n" +
-                "..........\n";
+                """
+                        ..........
+                        ..........
+                        ..........
+                        ..........
+                        .....0....
+                        ......0...
+                        ....000...
+                        ..........
+                        ..........
+                        ..........
+                        """;
         List<Location> seed = Arrays.asList(
                 Location.of(4, 5),
                 Location.of(5, 6),
@@ -99,6 +85,6 @@ public class WorldTest {
                 Location.of(6, 6)
         );
         World world = World.generation(seed, WORLD_SIZE);
-        assertThat(world.toString(), is(equalTo(expected)));
+        assertEquals(expected, world.toString());
     }
 }
